--- a/src/styles/components/Instagram.css
+++ b/src/styles/components/Instagram.css
@@ -1,6 +1,7 @@
-body {
+.instagram-component {
   text-align: center;
   height: 1269px;
+  width: 100%;
   background-image: url('../../assets/Feed_bg.jpg');
   background-position: center center;
   background-size: cover;
@@ -35,7 +36,7 @@ a {
   display: inline-block;
   width: 300px;
   background-color: white;
-  margin: 5px;
+  margin: 10px;
 }
 
 .instagram-item p {
