--- a/src/styles/components/Slider.css
+++ b/src/styles/components/Slider.css
@@ -14,19 +14,62 @@
 
 .slider-container h2 {
   font-family: 'Lato', sans-serif;
-  font-size: 30px;
-  color: #2E2F31;
-  line-height: 40px;
-  padding-top: 50px;
+  font-size: 50px;
+  font-weight: 400;
+  color: #000000;
+  width: 250px;
+  height: 60px;
+  position: relative;
+  top: 250px;
+  margin: auto;
 }
 
-.slider-container p {
-  width: 940px;
-  height: 168px;
+.black-button {
+  background: #000000;
+  border-radius: 40px;
+  width: 150px;
+  height: 40px;
   margin: auto;
+  position: relative;
+  top: 280px;
+}
+
+.black-button p {
+  width: 66px;
+  height: 21px;
   font-family: 'Lato', sans-serif;
-  font-size: 20px;
-  color: #000000;
-  letter-spacing: 0.5px;
-  line-height: 28px;
+  font-size: 15px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  line-height: 21px;
+  margin: auto;
+}
+
+.arrow-left {
+  background: #000000;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 340px;
+  left: 480px;
+}
+
+.arrow-right {
+  background: #000000;
+  border-radius: 100%;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 340px;
+  right: 480px;
+}
+
+.arrow i {
+  color: #FFFFFF;
+  font-size: 30px;
+  width: 30px;
+  height: 30px;
+  margin: auto;
+  padding-top: 5px;
 }
