a bit of form styling

--- a/src/styles/components/Form.css
+++ b/src/styles/components/Form.css
@@ -1,6 +1,5 @@
 .form-container {
-  opacity: 0.2;
-  background-color: #FFFFFF;
+  background-color: rgba(255,255,255,0.2);
   width: 620px;
   height: 290px;
   margin: auto;
@@ -8,6 +7,14 @@
   top: 270px;
   text-align: center;
   padding-top: 20px;
+}
+
+input {
+font-family: 'Lato', sans-serif;
+font-size: 18px;
+color: rgba(0,0,0,0.5);
+letter-spacing: 0.5px;
+line-height: 26px;
 }
 
 .input-small {
@@ -18,6 +25,11 @@
 }
 
 .textarea {
+  font-family: 'Lato', sans-serif;
+  font-size: 18px;
+  color: rgba(0,0,0,0.5);
+  letter-spacing: 0.5px;
+  line-height: 26px;
   width: 600px;
   height: 120px;
   margin-top: 20px;
