--- a/src/styles/components/Form.css
+++ b/src/styles/components/Form.css
@@ -1,3 +1,7 @@
+body {
+  box-sizing: border-box;
+}
+
 .form-container {
   background-color: rgba(255,255,255,0.2);
   width: 620px;
@@ -15,24 +19,32 @@ font-size: 18px;
 color: rgba(0,0,0,0.5);
 letter-spacing: 0.5px;
 line-height: 26px;
+width: 285px;
+height: 50px;
+background: #FFFFFF;
+margin: 2px 2px;
+padding-left: 10px;
 }
 
-.input-small {
-  width: 295px;
-  height: 50px;
-  background: #FFFFFF;
-  margin: 2px 2px;
+input:focus {
+  color: black;
 }
 
-.textarea {
+textarea {
   font-family: 'Lato', sans-serif;
   font-size: 18px;
   color: rgba(0,0,0,0.5);
   letter-spacing: 0.5px;
   line-height: 26px;
-  width: 600px;
-  height: 120px;
+  width: 590px;
+  height: 110px;
   margin-top: 20px;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+textarea:focus {
+  color: black;
 }
 
 .invalid {
