--- a/src/styles/components/Form.css
+++ b/src/styles/components/Form.css
@@ -1,4 +1,4 @@
-body {
+* {
   box-sizing: border-box;
 }
 
@@ -19,7 +19,7 @@ font-size: 18px;
 color: rgba(0,0,0,0.5);
 letter-spacing: 0.5px;
 line-height: 26px;
-width: 285px;
+width: 295px;
 height: 50px;
 background: #FFFFFF;
 margin: 2px 2px;
@@ -36,8 +36,8 @@ textarea {
   color: rgba(0,0,0,0.5);
   letter-spacing: 0.5px;
   line-height: 26px;
-  width: 590px;
-  height: 110px;
+  width: 600px;
+  height: 120px;
   margin-top: 20px;
   padding-left: 10px;
   padding-top: 10px;
@@ -78,4 +78,27 @@ textarea:focus {
 
 .valid {
   display: inline;
+}
+
+.send-button {
+  height: 40px;
+  width: 150px;
+  background: #FF5454;
+  border-radius: 40px;
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  line-height: 21px;
+  margin: auto;
+  position: relative;
+  top: 40px;
+}
+
+.send-button:hover {
+  background: #FF7676;
+}
+
+.send-button p {
+  padding-top: 9px;
 }
