--- a/src/styles/containers/Contact.css
+++ b/src/styles/containers/Contact.css
@@ -1,6 +1,21 @@
 .contact-component {
   background-image: url('../../assets/Feed_bg.jpg');
   background-size: cover;
-  background-position: center center;
+  background-position: top center;
   height: 826px;
+}
+
+.contact-header {
+  margin: auto;
+  position: relative;
+  top: 200px;
+  text-align: center;
+  width: 400px;
+  height: 100px;
+  font-family: Helvetica;
+  font-weight: 300;
+  font-size: 36px;
+  color: #FFFFFF;
+  letter-spacing: 0;
+  line-height: 50.4px;
 }
