--- a/src/styles/components/About.css
+++ b/src/styles/components/About.css
@@ -29,3 +29,69 @@
   letter-spacing: 0.5px;
   line-height: 28px;
 }
+
+@media only screen and (max-width: 1050px) {
+
+  .about-container p {
+    width: 620px;
+    font-family: Helvetica;
+    font-size: 20px;
+    color: #000000;
+    letter-spacing: 0.5px;
+    line-height: 28px;
+  }
+
+}
+
+@media only screen and (max-device-width: 1050px) {
+
+  .about-container p {
+    width: 620px;
+    font-family: Helvetica;
+    font-size: 20px;
+    color: #000000;
+    letter-spacing: 0.5px;
+    line-height: 28px;
+  }
+
+}
+
+@media only screen and (max-width: 400px) {
+  .about-component {
+    height: 354px;
+  }
+
+  .about-container h2 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    padding-top: 35px;
+  }
+
+  .about-container p {
+    width: 300px;
+    font-size: 15px;
+    color: #000000;
+    line-height: 19.6px;
+  }
+}
+
+@media only screen and (max-device-width: 400px) {
+  .about-component {
+    height: 354px;
+  }
+
+  .about-container h2 {
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 28px;
+    padding-top: 35px;
+  }
+
+  .about-container p {
+    width: 300px;
+    font-size: 15px;
+    color: #000000;
+    line-height: 19.6px;
+  }
+}
